envoy/filter-chain/quickstart.yaml
# This's a demo show if possible to set up always reject with local ratelimit.
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      protocol: TCP
      address: 127.0.0.1
      port_value: 9901

static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 8000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                access_log:
                  - name: envoy.access_loggers.file
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                      log_format:
                        text_format_source:
                          inline_string: |
                            [%START_TIME%] "%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%" %RESPONSE_CODE% %RESPONSE_FLAGS% %RESPONSE_CODE_DETAILS% %CONNECTION_TERMINATION_DETAILS% "%UPSTREAM_TRANSPORT_FAILURE_REASON%" %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% "%REQ(X-FORWARDED-FOR)%" "%REQ(USER-AGENT)%" "%REQ(X-REQUEST-ID)%" "%REQ(:AUTHORITY)%" "%UPSTREAM_HOST%" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM [...]
                      path: /dev/stdout
                stat_prefix: ingress_http
                http_filters:
                  - name: envoy.filters.http.filter_chain
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.filter_chain.v3.FilterChainConfig
                      default_filter_chain:
                        filters:
                          - name: envoy.filters.http.lua
                            typed_config:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
                              inline_code: |
                                function envoy_on_response(response_handle)
                                  -- Add a header to the downstream response back to the client
                                  response_handle:headers():add("x-response-modified-by", "envoy-route-listener")
                                end
                  # Placeholder for per route filter_chain
                  - name: envoy.filters.http.filter_chain.for_route
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.filter_chain.v3.FilterChainConfig
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/" }
                          name: "default"
                          route:
                            cluster: default_service
                          typed_per_filter_config:
                            envoy.filters.http.filter_chain:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.filter_chain.v3.FilterChainConfigPerRoute
                              filter_chain:
                                filters:
                                  - name: envoy.filters.http.lua
                                    typed_config:
                                      "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
                                      inline_code: |
                                        function envoy_on_response(response_handle)
                                          -- Add a header to the downstream response back to the client
                                          response_handle:headers():add("x-response-modified-by", "envoy-route-override")
                                        end
                            envoy.filters.http.filter_chain.for_route:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.filter_chain.v3.FilterChainConfigPerRoute
                              filter_chain:
                                filters:
                                  - name: envoy.filters.http.lua
                                    typed_config:
                                      "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
                                      inline_code: |
                                        function envoy_on_response(response_handle)
                                          -- Add a header to the downstream response back to the client
                                          response_handle:headers():add("x-response-modified-by", "envoy-route-lua")
                                        end

    - name: staticreply-8080
      address:
        socket_address:
          address: 127.0.0.1
          port_value: 8080
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: auto
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          direct_response:
                            status: 200
                            body:
                              inline_string: "example body\n"
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: default_service
      load_assignment:
        cluster_name: default_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 8080
